Updated directory, fixed navbar flex and few tweaks, push to test on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,87 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&display=swap');
 
-/* li, a, button {
-  font-family: 'Roboto Mono', monospace;
-  font-weight: 700;
-  font-size: 14px;
-  color: #ecf0f1;
-  text-decoration: none;
-} */
-
-/* button {
-  padding: 9px 25px;
-  background-color: rgba(0,136,169,1);
-  border: none;
-  border-radius: 50px;
-  cursor: pointer;
-  transition: all 0.3s ease 0s;
-} */
-
-/* button:hover {
-  background-color: rgba(0,136,169,0.8);
-} */
-
-/* 
-  body {
-  /* The image used */
-  /* background-image: url("images/index_background.jpeg"); */
-
-  /* Full height */
-  /* height: 100%; */
-
-  /* Center and scale the image nicely */
-  /* background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  } */
-
-
-/* body {
-    color: white;
-    font-family: Helvetica, Arial, sans-serif;
-  }
-
-.navbar ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  /* background-color: #333; */
-/* } */
-
-/* .navbar li {
-  float: left;
-} */
-
-/* .navbar li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-} */
-
-/* Change the link color to #111 (black) on hover */
-/* .navbar li a:hover {
-  background-color: #111;
-} */
-
-
-
-
-
-
 /* general */
-
-/* * {
-  box-sizing: border-box;
-  padding: 0;
-} */
-
-/* header, html {
-  height: 100%;
-  margin: 0;
-  } */
 
 .sr-only {
   color: transparent;
@@ -103,13 +22,14 @@ body {
 
 .primary-header {
   background-color: black;
-  background-image: url("images/project-index1.jpg");
+  background-image: url("../img/project-index1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   /* background-blend-mode: multiply; */
   display: flex;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
   /* padding: 2rem; */
   /* padding-top: 2rem; */
   height: 100vh;
@@ -117,6 +37,7 @@ body {
 }
 
 .logo{
+  padding-top: 2rem;
   width: 6rem;
   height: 2.5rem;
 }
@@ -138,13 +59,9 @@ body {
   list-style: none;
   display: flex;
   padding: 0;
+  padding-top: 2.75rem;
   margin: 0;
 }
-
-/* .primary-navigation li {
-  display: inline-block;
-  padding: 0px 20px;
-} */
 
 .primary-navigation li a {
   transition: all 0.3s ease 0s;
@@ -163,25 +80,29 @@ body {
 }
 
 @media (max-width: 55em) {
-  .primary-header {
-    padding: 0.75rem;
-  }
-
   .logo {
     z-index: 2000;
+    padding-top: 0.75rem;
   }
 
   .primary-navigation {
-    gap: var(--gap, 0.75rem);
+    /* gap: var(--gap, 0.75rem); */
     position: fixed;
     z-index: 1000;
-    inset: 0 0 0 40%;
+    inset: 0 0 0 30%;
     flex-direction: column;
-    padding: min(30vh, 8rem) 2rem;
+    align-items: flex-end;
+    padding: min(30vh, 5rem) 3rem;
     background: black;
 
     transform: translateX(100%);
     transition: transform 350ms ease-out;
+  }
+
+  .primary-navigation li {
+    min-width: 14rem;
+    border-bottom: 1px solid rgb(47, 47, 47);
+    text-align: end;
   }
 
   .primary-navigation[data-visible="true"] {
@@ -193,7 +114,7 @@ body {
     position: absolute;
     z-index: 9999;
     background-color: transparent;
-    background-image: url("images/Hamburger_icon_white.svg");
+    background-image: url("../img/Hamburger_icon_white.svg");
     background-size: contain;
     background-repeat: no-repeat;
     width: 1.25rem;
@@ -204,24 +125,31 @@ body {
   }
 
   .mobile-nav-toggle[aria-expanded="true"] {
-    background-image: url("images/Cross_icon_white.svg");
+    background-image: url("../img/Cross_icon_white.svg");
     width: 1rem;
   }
 }
 
-/* task 1 slide */
+/* index task 1 div */
 
 .task1 {
   background-color: black;
-  background-image: url("images/task1-index.jpg");
+  background-image: url("../img/task1-index.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  /* background-blend-mode: multiply; */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  /* padding: 2rem; */
-  /* padding-top: 2rem; */
+  background-position: center;
+  height: 100vh;
+  width: 100vw;
+}
+
+/* index task 2 div */
+
+.task2 {
+  background-color: black;
+  background-image: url("../img/task2-index.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   height: 100vh;
   width: 100vw;
 }
